--- a/sass/modual/_list.scss
+++ b/sass/modual/_list.scss
@@ -54,7 +54,8 @@
 
           &:hover {
             color: $aHover;
-            background-color: #f4f4f4;
+            // background-color: #f4f4f4;
+            background-color: rgba(255, 255, 255, 0.8);
           }
           .num {
             flex: 0 0 auto;
@@ -72,14 +73,15 @@
           flex: 1 1 auto;
           flex-basis: auto;
           .new {
-            background-color: $importantColor;
+            background-color: $color-orange;
             color: #fff;
-            padding: 0.1em 0.5em;
-            border-radius: 5px;
+            padding: 0.3em 0.5em 0.2em;
+            border-radius: 3px;
             margin-left: 1em;
             font-style: normal;
-            font-size: 0.938em;
+            font-size: 0.875em;
             display: inline-block;
+            line-height: 1em;
           }
         }
 
@@ -123,6 +125,113 @@
   .detail_num {
     margin-bottom: 0.1em;
   }
+}
+
+//expansile
+.expansile {
+  position: relative;
+  overflow: hidden;
+  padding: 1em 0 0;
+  margin: 0;
+  height: auto !important;
+  // margin: 10px auto;
+  // padding: 1em 2vw;
+  // border-bottom: 1px solid #ffe;
+  // line-height: 1.5;
+  // background: #6d7779;
+  // color: #fff;
+  // border-radius: 6px;
+  // width: 92vw;
+  // overflow: hidden;
+
+  &.partial {
+    height: 23em !important;
+  }
+  // &::after {
+  //   content: '';
+  //   display: none;
+  //   position: absolute;
+  //   right: 2vw;
+  //   bottom: 0;
+  //   top: auto;
+  //   height: 1.6em;
+  //   width: 16em;
+  //   background: linear-gradient(to right, rgba(#6d7779, 0) 1%, #6d7779 50%);
+  // }
+  // &.partial::after {
+  //   display: inline-block;
+  // }
+
+  // p {
+  //   margin: 0;
+  //   padding: 0;
+  // }
+  // p + p {
+  //   margin-top: 1.4em;
+  // }
+  .list {
+    padding: 0;
+    margin: 1em 0;
+  }
+
+  .readAll {
+    position: absolute;
+    // bottom: 0.25em;
+    top: 0em;
+    right: 0;
+    // height: 1.6em;
+    line-height: 1.6;
+    padding: 0.2em 0.8em 0.2em 26px;
+    margin: 0;
+    font-size: 0.875em;
+    color: #fff;
+    border-radius: 1em;
+    border: none;
+    transition: 0.2s;
+    background-color: #333;
+    cursor: pointer;
+    z-index: 9;
+  }
+  .readAll:hover {
+    // box-shadow: #222 0 0 0 2px;
+    background-color: $primaryColor;
+  }
+  .readAll:focus {
+    // box-shadow: #be0 0 0 0 2px;
+  }
+  .readAll::before {
+    content: '';
+    display: inline-block;
+    margin: 0 auto;
+    width: 6px;
+    height: 6px;
+    border-width: 2px;
+    border-color: #fff;
+    border-style: solid;
+    border-left: none;
+    border-top: none;
+    transform: rotate(225deg);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    position: absolute;
+    left: 12px;
+    top: 0.85em;
+    transition: 0.3s;
+  }
+  &.partial .readAll::before {
+    transform: rotate(45deg);
+    top: 0.6em;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  // .expansile {
+  //   width: 86%;
+  //   padding: 1em 20px;
+  //   .readAll {
+  //     right: 20px;
+  //   }
+  // }
 }
 
 // .album {
