--- a/sass/modual/_menu.scss
+++ b/sass/modual/_menu.scss
@@ -23,7 +23,7 @@
     left: 0;
     width: 100%;
     z-index: 999;
-    background-color: #fff;
+    background-color: darken($primaryColor, 15%);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     &:after {
       position: absolute;
@@ -39,6 +39,13 @@
       max-width: $container-max;
       margin: 0 auto;
     }
+    a {
+      color: #fff;
+      &:hover,
+      &:focus {
+        color: lighten($aHover, 10%);
+      }
+    }
   }
   @include screen('mobile') {
     display: none;
@@ -50,14 +57,15 @@
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: center;
+    // justify-content: flex-end;
     max-width: $container-max;
     // 第一層選單樣式
     > li {
       flex: 0 1 auto;
       > a {
         display: block;
-        padding: 0 1em 0;
+        padding: 0 1.5em 0;
         min-height: 2.5em;
         font-weight: bold;
         line-height: 2.5em;
