--- a/sass/page/_pagecommon.scss
+++ b/sass/page/_pagecommon.scss
@@ -81,7 +81,11 @@
     margin-bottom: 1.5em;
     transition: 0.5s;
     border: 2px solid #fff;
-    &:hover {
+    a {
+      color: $color-word;
+    }
+    &:hover,
+    &:focus {
       box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
       border: 2px solid $lightColor;
     }
@@ -177,6 +181,7 @@
           &.th_title {
             flex: 0 0 5em;
             font-weight: bold;
+            text-align: right;
           }
         }
         .tag {
