--- a/sass/common/_typography.scss
+++ b/sass/common/_typography.scss
@@ -2,6 +2,7 @@
 .cp {
   font-size: 1em * 1.0666666;
   line-height: 1.65em;
+  margin-top: 0.5em;
   @include screen('xs_mobile') {
     font-size: 1em * 1.2;
   }
