--- a/sass/modual/_form-beta.scss
+++ b/sass/modual/_form-beta.scss
@@ -222,10 +222,10 @@ select::-ms-expand {
 .necessary {
   font-size: 0.875rem;
   color: $color-red;
-  padding: 1px 6px;
-  border-radius: 2px;
-  margin: 0 6px 0 0;
-  box-shadow: 0 0 0 1px $color-red inset;
+  padding: 1px 0;
+  // border-radius: 2px;
+  margin: 0 4px 0 0;
+  // box-shadow: 0 0 0 1px $color-red inset;
 }
 
 .form_grid {
