--- a/sass/modual/_menu.scss
+++ b/sass/modual/_menu.scss
@@ -58,6 +58,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    font-size: 1.125rem;
     // justify-content: flex-end;
     max-width: $container-max;
     // 第一層選單樣式
@@ -124,7 +125,7 @@
         list-style: none;
         text-align: left;
         animation: showMenu 0.3s $cubic;
-        font-size: 0.875em;
+        font-size: 0.938rem;
         // 第二層選單樣式
         li {
           float: none;
