--- a/sass/element/_font.scss
+++ b/sass/element/_font.scss
@@ -23,6 +23,7 @@
     text-decoration: underline;
   }
 }
+@import url('https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 body {
   @include fontSetting(1em);
   line-height: 1.5em;
