--- a/sass/page/_pagecommon.scss
+++ b/sass/page/_pagecommon.scss
@@ -215,7 +215,101 @@
   border-radius: 5px;
   background-color: #fff;
   color: $color-word;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px;
+  box-shadow: rgba(229, 229, 229, 1) 0px 5px 20px 0px;
   margin: 1em 0 3em;
   font-size: 1em;
+}
+.searchint {
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: rgba(229, 229, 229, 1) 0px 5px 20px 0px;
+  padding: 1em 3.5em;
+  border-radius: 5px;
+  margin: 0 2% 2em;
+  p {
+    font-weight: bold;
+    font-size: 1.125em;
+    line-height: 2em;
+  }
+  @include screen('mobile') {
+    padding: 1em 2em;
+    margin: 0 4% 2em;
+  }
+}
+.sub_epaper {
+  background: rgba(255, 255, 255, 1) url('../images/sub_epaperbg.jpg') no-repeat right top;
+  background-size: auto 100%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 20px 0px;
+  padding: 1em 3.5em;
+  border-radius: 0;
+  margin: 1em 2% 0;
+  min-height: 218px;
+  .h2title {
+    color: darken($primaryColor, 0%);
+    font-weight: bold;
+    font-size: 2em;
+    line-height: 120px !important;
+    margin: 40px 0 0;
+    position: relative;
+    letter-spacing: 2px;
+    padding-left: 130px;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    &:before {
+      content: '';
+      width: 120px;
+      height: 120px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: url('../images/h2titlebg.png') no-repeat center center;
+      background-size: 100% auto;
+    }
+  }
+  .epaper_icon {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    top: 34%;
+    right: 100px;
+    z-index: 9;
+    li {
+      flex: 0 0 80px;
+      font-size: 0;
+      img {
+        &:hover,
+        &:focus {
+          background: rgba(255, 255, 255, 0.3);
+          border-radius: 50%;
+          box-shadow: 0 2px 0 5px rgba(255, 255, 255, 0.3);
+        }
+      }
+    }
+  }
+  @include screen('mobile') {
+    padding: 1em 2em;
+    margin: 0 4% 2em;
+    .h2title {
+      margin: 0;
+    }
+    .epaper_icon {
+      top: 100px;
+      right: auto;
+      justify-content: center;
+    }
+  }
+  @include screen('xs_mobile') {
+    .h2title {
+      margin: 10px 0 0;
+      font-size: 1.8em;
+      line-height: 80px !important;
+      padding-left: 80px;
+      &:before {
+        width: 80px;
+        height: 80px;
+      }
+    }
+    .epaper_icon {
+      top: 90px;
+    }
+  }
 }
