--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: url(../images/body_bg.jpg) no-repeat left top;
+  background: #fff url(../images/body_bg2.jpg) no-repeat center top 240px;
   background-size: 100% auto;
   &.noscroll {
     position: static !important;
@@ -19,13 +19,31 @@ body {
     padding: 0;
   }
 }
+.mp1 {
+}
+.mp2 {
+  background: #fff url(../images/body_bg2.jpg) no-repeat center top 100px;
+  background-size: 100% auto;
+  &.noscroll {
+    position: static !important;
+    width: 100%;
+    height: 100%;
+    overflow: hidden !important;
+    overflow-y: hidden !important;
+    margin: 0;
+    padding: 0;
+  }
+  .main {
+    min-height: 100vh;
+  }
+}
 
 // 最外圍預設為100%
 .wrapper {
   width: 100%;
   margin: 0px auto;
   @include screen('mobile') {
-    background: #fff;
+    // background: #fff;
     overflow: hidden;
     overflow-y: auto;
   }
