--- a/css/hyui.css
+++ b/css/hyui.css
@@ -3225,14 +3225,13 @@ div.tag ul li a:hover, div.tag ul li a:focus {
   top: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.54);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   pointer-events: none;
   z-index: -1;
 }
 @media screen and (max-width: 767px) {
   .header:before {
     height: 60px;
-    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.54);
   }
 }
 .header > .container .searchCtrl, .header > .container .sidebarCtrl {
@@ -3422,6 +3421,17 @@ div.tag ul li a:hover, div.tag ul li a:focus {
   flex-flow: row wrap;
   align-items: center;
   align-self: center;
+}
+
+.mp1 .header,
+.mp2 .header {
+  position: absolute;
+  background: none;
+}
+
+.mp2 .main {
+  min-height: 120vh;
+  padding: 0 0 2em;
 }
 
 .searchblock {
@@ -3644,45 +3654,22 @@ div.tag ul li a:hover, div.tag ul li a:focus {
   color: #f4a165;
 }
 
-@media screen and (min-width: 1699px) {
-  .mp_searchblock {
-    padding: 30px 15%;
-  }
-}
-@media screen and (max-width: 1399px) {
-  .mp_searchblock {
-    padding: 30px 3%;
-  }
-}
-@media screen and (max-width: 767px) {
-  .mp_searchblock {
-    margin-bottom: 3em;
-    overflow: visible;
-    height: 280px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .mp_searchblock:before {
-    padding-top: 80%;
-  }
-}
-.mp_searchblock .container {
-  background: url("../images/mp_search_bg.jpg") no-repeat center top;
-  background-size: cover;
-  overflow: hidden;
+.mp_searchblock {
   position: relative;
-  margin: 0 auto;
-  padding: 30px 10%;
+  margin: 0;
+  padding: 30px 0;
+  background: url("../images/body_bg.jpg") no-repeat center center;
+  background-size: cover;
   overflow: hidden;
   overflow: visible;
   margin-bottom: 3em;
 }
-.mp_searchblock .container:before {
+.mp_searchblock:before {
   display: inline-block;
   content: "";
   padding-top: 25%;
 }
-.mp_searchblock .container img {
+.mp_searchblock img {
   display: block;
   position: absolute;
   top: 0;
@@ -3693,35 +3680,22 @@ div.tag ul li a:hover, div.tag ul li a:focus {
   height: 100%;
   margin: auto;
 }
-.mp_searchblock .search {
+.mp_searchblock .container {
   background: rgb(247, 201, 129);
   background: linear-gradient(180deg, rgb(247, 201, 129) 0%, rgb(243, 132, 56) 100%);
   padding: 50px;
-  position: absolute;
-  top: 65%;
-  width: 80%;
-  margin: 0 auto !important;
+  width: 96%;
+  margin: 0 auto -4em !important;
   z-index: 9;
+  max-width: 1340px !important;
 }
 @media screen and (min-width: 1699px) {
-  .mp_searchblock .search {
-    width: 70%;
-    max-width: 1400px !important;
-  }
-}
-@media screen and (max-width: 1399px) {
-  .mp_searchblock .search {
-    top: 55%;
-    width: 94%;
-  }
-}
-@media screen and (max-width: 991px) {
-  .mp_searchblock .search {
-    top: 48%;
+  .mp_searchblock .container {
+    width: 96%;
   }
 }
 @media screen and (max-width: 767px) {
-  .mp_searchblock .search {
+  .mp_searchblock .container {
     padding: 0 20px;
   }
 }
@@ -3875,54 +3849,6 @@ div.tag ul li a:hover, div.tag ul li a:focus {
   color: #f08436;
   cursor: pointer;
   text-decoration: underline;
-}
-
-.mp_imgblock {
-  position: relative;
-  margin: 0;
-  padding: 30px 10%;
-  background: url("../images/mp_search_bg.jpg") no-repeat center top;
-  background-size: cover;
-  overflow: hidden;
-  overflow: visible;
-  margin-bottom: 1em;
-}
-.mp_imgblock:before {
-  display: inline-block;
-  content: "";
-  padding-top: 12.5%;
-}
-.mp_imgblock img {
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-}
-@media screen and (max-width: 767px) {
-  .mp_imgblock {
-    overflow: hidden;
-  }
-  .mp_imgblock:before {
-    display: inline-block;
-    content: "";
-    padding-top: 25%;
-  }
-  .mp_imgblock img {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-  }
 }
 
 @keyframes showMenu {
@@ -9443,7 +9369,7 @@ html {
 }
 
 body {
-  background: #fff url(../images/body_bg2.jpg) no-repeat center top 240px;
+  background: #fff url(../images/body_bg2.jpg) no-repeat center top 35vh;
   background-size: 100% auto;
 }
 body.noscroll {
@@ -9455,22 +9381,11 @@ body.noscroll {
   margin: 0;
   padding: 0;
 }
-
-.mp2 {
-  background: #fff url(../images/body_bg2.jpg) no-repeat center top 100px;
-  background-size: 100% auto;
-}
-.mp2.noscroll {
-  position: static !important;
-  width: 100%;
-  height: 100%;
-  overflow: hidden !important;
-  overflow-y: hidden !important;
-  margin: 0;
-  padding: 0;
-}
-.mp2 .main {
-  min-height: 100vh;
+@media screen and (max-width: 767px) {
+  body {
+    background: #fff url(../images/body_bg2.jpg) no-repeat center top 13em;
+    background-size: 100% auto;
+  }
 }
 
 .wrapper {
