--- a/sass/modual/_header.scss
+++ b/sass/modual/_header.scss
@@ -22,12 +22,12 @@
     top: 0;
     left: 0;
     background: rgba(255, 255, 255, 0.54);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    // box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     pointer-events: none;
     z-index: -1;
     @include screen('mobile') {
       height: 60px;
-      background: rgba(255, 255, 255, 1);
+      background: rgba(255, 255, 255, 0.54);
     }
   }
   // mobile btn for extend
@@ -214,6 +214,19 @@
       align-items: center;
       align-self: center;
     }
+  }
+}
+.mp1,
+.mp2 {
+  .header {
+    position: absolute;
+    background: none;
+  }
+}
+.mp2 {
+  .main {
+    min-height: 120vh;
+    padding: 0 0 2em;
   }
 }
 
@@ -473,70 +486,28 @@
 
 //search
 .mp_searchblock {
-  // position: relative;
-  // margin: 0;
-  // padding: 30px 10%;
+  position: relative;
+  margin: 0;
+  padding: 30px 0;
+  background: url('../images/body_bg.jpg') no-repeat center center;
+  background-size: cover;
+  @include aspect-ratio(16, 4);
+  overflow: visible;
+  margin-bottom: 3em;
 
-  // @include aspect-ratio(16, 4);
-  // overflow: visible;
-  // margin-bottom: 3em;
-
-  @media screen and (min-width: 1699px) {
-    padding: 30px 15%;
-  }
-
-  @include screen('notebook') {
-    padding: 30px 3%;
-  }
-  @include screen('mobile') {
-    margin-bottom: 3em;
-    overflow: visible;
-    height: 280px;
-  }
-  &:before {
-    @include screen('mobile') {
-      padding-top: 80%;
-    }
-  }
   .container {
-    background: url('../images/mp_search_bg.jpg') no-repeat center top;
-    background-size: cover;
-    overflow: hidden;
-    position: relative;
-    margin: 0 auto;
-    padding: 30px 10%;
-
-    @include aspect-ratio(16, 4);
-    overflow: visible;
-    margin-bottom: 3em;
-  }
-  .search {
     background: rgb(247, 201, 129);
     background: linear-gradient(180deg, rgba(247, 201, 129, 1) 0%, rgba(243, 132, 56, 1) 100%);
     padding: 50px;
-    // margin-top: -6%;
-    position: absolute;
-    top: 65%;
-    width: 80%;
-    margin: 0 auto !important;
+    width: 96%;
+    margin: 0 auto -4em !important;
     z-index: 9;
-    // max-width: 1400px !important;
-
+    max-width: 1340px !important;
     @media screen and (min-width: 1699px) {
-      width: 70%;
-      max-width: 1400px !important;
-    }
-
-    @include screen('notebook') {
-      top: 55%;
-      width: 94%;
-    }
-    @include screen('tablet') {
-      top: 48%;
+      width: 96%;
     }
     @include screen('mobile') {
       padding: 0 20px;
-      // margin-top: -40%;
     }
   }
   .searchbtn {
@@ -682,19 +653,5 @@
         }
       }
     }
-  }
-}
-
-.mp_imgblock {
-  position: relative;
-  margin: 0;
-  padding: 30px 10%;
-  background: url('../images/mp_search_bg.jpg') no-repeat center top;
-  background-size: cover;
-  @include aspect-ratio(16, 2);
-  overflow: visible;
-  margin-bottom: 1em;
-  @include screen('mobile') {
-    @include aspect-ratio(16, 4);
   }
 }
