--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #fff url(../images/body_bg2.jpg) no-repeat center top 240px;
+  background: #fff url(../images/body_bg2.jpg) no-repeat center top 35vh;
   background-size: 100% auto;
   &.noscroll {
     position: static !important;
@@ -18,23 +18,9 @@ body {
     margin: 0;
     padding: 0;
   }
-}
-.mp1 {
-}
-.mp2 {
-  background: #fff url(../images/body_bg2.jpg) no-repeat center top 100px;
-  background-size: 100% auto;
-  &.noscroll {
-    position: static !important;
-    width: 100%;
-    height: 100%;
-    overflow: hidden !important;
-    overflow-y: hidden !important;
-    margin: 0;
-    padding: 0;
-  }
-  .main {
-    min-height: 100vh;
+  @include screen('mobile') {
+    background: #fff url(../images/body_bg2.jpg) no-repeat center top 13em;
+    background-size: 100% auto;
   }
 }
 
